<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape_table">

    <LinearLayout
        android:id="@+id/ll_table"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/ll_sp"
        android:layout_centerInParent="true"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/heightedt_36dp"
        android:gravity="right"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_dateTime"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:maxLines="2"
            android:padding="@dimen/margin_4dp"
            android:text="@string/date_time"
            android:textColor="@color/colorWhite"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:maxLines="2"
            android:padding="@dimen/margin_4dp"
            android:text="@string/content"
            android:textColor="@color/colorWhite"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_money"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:maxLines="2"
            android:padding="@dimen/margin_4dp"
            android:text="@string/money"
            android:textColor="@color/colorWhite"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_surplus"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:maxLines="2"
            android:padding="@dimen/margin_4dp"
            android:text="@string/surplus"
            android:textColor="@color/colorWhite"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_account"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:maxLines="2"
            android:padding="@dimen/margin_4dp"
            android:text="@string/account"
            android:textColor="@color/colorWhite"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_type"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:maxLines="2"
            android:padding="@dimen/margin_4dp"
            android:text="@string/Transaction_type"
            android:textColor="@color/colorWhite"
            android:textSize="16sp" />
    </LinearLayout>

</RelativeLayout>