<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/shape_rl_cha"
    tools:context="com.Demo.vjrutnat.quanlyschitieu.MainActivity">

    <TextView
        android:padding="@dimen/activity_horizontal_margin"
        android:id="@+id/tv_introduce"
        android:textSize="@dimen/textsize_18dp"
        android:layout_centerInParent="true"
        android:textColor="@color/colorWhite"
        android:text="@string/note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ListView
        android:id="@+id/lv_notification"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:layout_above="@+id/ll_btn"
        android:layout_width="match_parent"
        android:layout_height="match_parent"></ListView>

    <LinearLayout
        android:id="@+id/ll_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/ll_groin1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_add_transaction"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/margin_4dp"
                android:layout_weight="1"
                android:background="@color/colorRed"
                android:text="@string/add_transaction"
                android:textColor="@color/colorWhite" />

            <Button
                android:id="@+id/btn_Trading_statistics"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/margin_4dp"
                android:layout_weight="1"
                android:background="@color/colorRed"
                android:text="@string/Trading_Statistics"
                android:textColor="@color/colorWhite" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_groin2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_manager"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/margin_4dp"
                android:layout_weight="1"
                android:background="@color/colorRed"
                android:text="@string/Account_Manager"
                android:textColor="@color/colorWhite" />

            <Button
                android:id="@+id/btn_introduce"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/margin_4dp"
                android:layout_weight="1"
                android:background="@color/colorRed"
                android:text="@string/Introduce"
                android:textColor="@color/colorWhite" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
