<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape_rl_cha">

    <TextView
        android:gravity="center"
        android:id="@+id/tv_noteStatic"
        android:text="Moi ban chon khoang thoi gian"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/textsize_18dp"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:id="@+id/ll_date_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="38dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_4dp"
            android:layout_weight="1"
            android:text="Từ ngày"
            android:textColor="@color/colorWhite"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="match_parent"
            android:layout_height="@dimen/heightedt_36dp"
            android:layout_margin="@dimen/margin_4dp"
            android:layout_weight="1"
            android:textColor="@color/colorWhite"
            android:background="@drawable/shape_text"
            android:padding="@dimen/margin_4dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_4dp"
            android:layout_weight="1"
            android:padding="@dimen/margin_4dp"
            android:text="Đến ngày"
            android:textColor="@color/colorWhite"
            android:textSize="16sp" />

        <TextView
            android:textColor="@color/colorWhite"
            android:id="@+id/tv_date2"
            android:layout_width="match_parent"
            android:layout_height="@dimen/heightedt_36dp"
            android:layout_margin="@dimen/margin_4dp"
            android:layout_weight="1"
            android:background="@drawable/shape_text"
            android:padding="@dimen/margin_4dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_sp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/ll_date_time"
        android:layout_marginLeft="@dimen/margin_4dp"
        android:layout_marginRight="@dimen/margin_4dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <Spinner
            android:layout_marginRight="8dp"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:background="@drawable/shape_spinner"
            android:id="@+id/sp_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"></Spinner>

        <Spinner
            android:layout_marginLeft="8dp"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:background="@drawable/shape_spinner"
            android:id="@+id/sp_transaction_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"></Spinner>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_table"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/ll_sp"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:gravity="right"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:maxLines="2"
            android:padding="@dimen/margin_4dp"
            android:text="@string/date_time"
            android:textColor="@color/colorWhite"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:maxLines="2"
            android:padding="@dimen/margin_4dp"
            android:text="@string/content"
            android:textColor="@color/colorWhite"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:maxLines="2"
            android:padding="@dimen/margin_4dp"
            android:text="@string/money"
            android:textColor="@color/colorWhite"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:maxLines="2"
            android:padding="@dimen/margin_4dp"
            android:text="@string/surplus"
            android:textColor="@color/colorWhite"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:maxLines="2"
            android:padding="@dimen/margin_4dp"
            android:text="@string/account"
            android:textColor="@color/colorWhite"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:maxLines="2"
            android:padding="@dimen/margin_4dp"
            android:text="@string/Transaction_type"
            android:textColor="@color/colorWhite"
            android:textSize="16sp" />
    </LinearLayout>

    <ListView
        android:id="@+id/lv_table"
        android:layout_below="@id/ll_table"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"></ListView>

</RelativeLayout>