<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape_rl_cha"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="40dp"
        android:background="@drawable/shape_table">

        <LinearLayout
            android:layout_marginLeft="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_4dp"
                android:text="@string/date_time"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/textsize_18dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_4dp"
                android:layout_marginRight="@dimen/margin_4dp"
                android:maxLines="1"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/textsize_18dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginLeft="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_4dp"
                android:text="@string/content"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/textsize_18dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_4dp"
                android:layout_marginRight="@dimen/margin_4dp"
                android:maxLines="1"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/textsize_18dp" />
        </LinearLayout>


        <LinearLayout
            android:layout_marginLeft="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_4dp"
                android:text="@string/money"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/textsize_18dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_4dp"
                android:layout_marginRight="@dimen/margin_4dp"
                android:maxLines="1"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/textsize_18dp" />
        </LinearLayout>
        <LinearLayout
            android:layout_marginLeft="8dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_marginLeft="@dimen/margin_4dp"
                android:textSize="@dimen/textsize_18dp"
                android:textColor="@color/colorWhite"
                android:text="@string/surplus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_marginRight="@dimen/margin_4dp"
                android:layout_marginLeft="@dimen/margin_4dp"
                android:maxLines="1"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/textsize_18dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_marginLeft="8dp"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_marginLeft="@dimen/margin_4dp"
                android:textSize="@dimen/textsize_18dp"
                android:textColor="@color/colorWhite"
                android:text="@string/account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_marginRight="@dimen/margin_4dp"
                android:layout_marginLeft="@dimen/margin_4dp"
                android:maxLines="1"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/textsize_18dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>