<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape_rl_cha"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_tk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/textsize_18dp"
        android:layout_marginTop="@dimen/heightedt_36dp"
        android:text="@string/account"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/textsize_18dp" />

    <Spinner
        android:layout_marginTop="@dimen/margin_4dp"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:background="@drawable/shape_spinner"
        android:id="@+id/spn_gd"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_tk" />

    <TextView
        android:id="@+id/tv_loai_TK"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/spn_gd"
        android:layout_marginLeft="@dimen/textsize_18dp"
        android:layout_marginTop="@dimen/heightedt_36dp"
        android:text="Loai tai khoan"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/textsize_18dp" />

    <RadioGroup
        android:id="@+id/rg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_loai_TK"
        android:layout_margin="@dimen/textsize_18dp">

        <RadioButton
            android:id="@+id/rd_khoan_chi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin_4dp"
            android:text="Khoan chi"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/textsize_18dp" />

        <RadioButton
            android:id="@+id/rd_khoan_thu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin_4dp"
            android:text="Khoan thu"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/textsize_18dp" />
    </RadioGroup>

    <EditText
        android:id="@+id/edt_addmoney"
        android:layout_width="match_parent"
        android:layout_height="@dimen/heightedt_36dp"
        android:layout_below="@id/rg"
        android:layout_marginLeft="@dimen/textsize_18dp"
        android:layout_marginRight="@dimen/textsize_18dp"
        android:background="@color/colorWhite"
        android:hint="Nhap so tien:"
        android:padding="@dimen/margin_4dp" />

    <EditText
        android:id="@+id/edt_addreson"
        android:layout_width="match_parent"
        android:layout_height="@dimen/heightedt_36dp"
        android:layout_below="@id/edt_addmoney"
        android:layout_marginLeft="@dimen/textsize_18dp"
        android:layout_marginRight="@dimen/textsize_18dp"
        android:layout_marginTop="@dimen/shaperl_6dp"
        android:background="@color/colorWhite"
        android:hint="Nhap ly do:"
        android:padding="@dimen/margin_4dp" />

    <LinearLayout
        android:id="@+id/ll_date_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edt_addreson"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_date"
            android:gravity="center"
            android:textColor="@color/colorWhite"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_margin="@dimen/textsize_18dp"
            android:layout_weight="1"
            android:background="@drawable/shape_text" />

        <TextView
            android:id="@+id/tv_time"
            android:gravity="center"
            android:textColor="@color/colorWhite"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/textsize_18dp"
            android:layout_weight="1"
            android:background="@drawable/shape_text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_date_time"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_save"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/textsize_18dp"
            android:layout_weight="1"
            android:background="@color/colorRed"
            android:text="@string/save" />

        <Button
            android:id="@+id/btn_saveClose"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/textsize_18dp"
            android:layout_weight="1"
            android:background="@color/colorRed"
            android:text="@string/save_and_close" />
    </LinearLayout>
</RelativeLayout>